8240634: event/runtime/TestMetaspaceAllocationFailure.java times out
Limit number of iterations

Reviewed-by: egahlin, stuefe